# tokio-client-server

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
myapi/: Cargo.toml  build.rs  mod.rs
myapi/src/: api_v1.rs  app_protocol.proto  app_protocol.rs  codec.rs  lib.rs  mod.rs  myapi_v1.rs
myapi/src/protobuf_api/: api-v1.proto
server/: Cargo.toml
server/src/: main.rs
