[package]
name = "client"
version = "0.1.0"
authors = ["wayc <wayc@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
myapi = {version = "0.1.0", path = "../myapi"}
bytes = "0.5.4"
protobuf = "2.17.0"
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.3.1", features = ["full"]}
time = "0.1"

