[package]
name = "myapi"
version = "0.1.0"
authors = ["wayc <wayc@protonmail.com>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myapi"
path = "src/mod.rs"
crate-type = ["lib"]

[dependencies]
#tokio = {version = "0.2", features = ["full"]}
#futures = "0.3"
prost = "0.6"
bytes = "0.5"
#tokio-util = { version="0.3", features = ["full"]}
#http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#httparse = "1.0"
#time = "0.1"

[build-dependencies]
prost-build = {version = "0.6" }

