[package]
name = "myapi"
version = "0.1.0"
authors = ["wayc <wayc@protonmail.com>"]
edition = "2018"

[lib]
name = "myapi"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.17.0"
tokio = {version = "0.2", features = ["full"]}
tokio-util = {version = "0.3", features = ["full"]}
bytes = "0.5"

[build-dependencies]
protoc-rust = "2.0"
