 [package]
 name = "server"
 version = "0.1.0"
 authors = ["wayc <wayc@protonmail.com>"]
 edition = "2018"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["full"]}
#futures = {version = "0.3.4", features = ["std"]}
futures = "0.3.4"
prost = "0.6"
#bytes = "0.5"
#byteorder = "1.3.4"
tokio-util = { version="0.3", features = ["full"]}
http = "0.2"
#serde = {version = "1.0", features = ["derive"]}
#serde_json = "1.0"
httparse = "1.0"
#time = "0.1"
myapi = { path = "../myapi" }
