 [package]
 name = "server"
 version = "0.1.0"
 authors = ["wayc <wayc@protonmail.com>"]
 edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["full"]}
tokio-util = { version="0.3", features = ["full"]}
protobuf = "2.17.0"
bytes = "0.5"
#http = "0.2"
#httparse = "1.0"
myapi = { path = "../myapi" }
